--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
 
-body {
-    background-image: url("https://www.teahub.io/photos/full/100-1003570_beautiful-landscape-4k-wallpaper-purple-nature-landscape-hd.jpg");
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    align-items: center;
-    font-family:Arial;
-    }
+        body {
+          background-image: url("https://www.teahub.io/photos/full/100-1003570_beautiful-landscape-4k-wallpaper-purple-nature-landscape-hd.jpg");
+          width: 100%;
+          height: 100%;
+          margin: 0;
+        }
     
     main {
         text-align: center;
@@ -16,7 +14,6 @@ body {
         max-width: 500px;
         margin: auto;
         padding: 10px;
-        background: blur(20px);
       }
     
       section {
@@ -26,73 +23,74 @@ body {
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       }
 
-header {
-  border: 2px solid #b3ccff;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  font-family: 'Aclonica';
-}
+      ol {
+         color:black;
+         border: 0,5px solid #b3ccff;
+         text-align: center;
+      }
 
-ol {
-    color:black;
-    border: 0,5px solid #b3ccff;
-    text-align: center;
- 
-}
+       li {
+         border: 1px solid #b3ccff;
+         font-family: 'Aclonica';font-size: 22px;
+      }
 
-li {
-    border: 1px solid #b3ccff;
-    font-family: 'Aclonica';font-size: 22px;
-}
+      h1 {
+        background-image: linear-gradient(to left top, #520064, #5a2c80, #614a9b, #6967b4, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke-width: 0.1px;
+        -webkit-text-stroke-color: rgb(107, 3, 167);
+        font-size: 40px;
+        border: 2px solid #b3ccff;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        font-family: 'Aclonica';
+        padding: 10px;
+      }
 
-h1 {
-  background-image: linear-gradient(to left top, #520064, #5a2c80, #614a9b, #6967b4, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 0.1px;
-  -webkit-text-stroke-color: white;
-  font-size: 50px;
-}
+      h2 {
+        background-image: linear-gradient(to left top, #520064, #5a2c80, #614a9b, #6967b4, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke-width: 0.5px;
+        -webkit-text-stroke-color: rgb(107, 3, 167);
+        font-size: 30px;
+       }
 
-h2 {
-  background-image: linear-gradient(to left top, #520064, #5a2c80, #614a9b, #6967b4, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 0.5px;
-  -webkit-text-stroke-color: white;
-  font-size: 30px;
-  }
+      h3 {
+        background-image: linear-gradient(to left top, #520064, #5a2c80, #614a9b, #6967b4, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke-width: 0.5px;
+        -webkit-text-stroke-color: rgb(107, 3, 167);
+        font-size: 30px;
+        text-decoration: underline;  
+      }
 
-h3 {
-  background-image: linear-gradient(to left top, #520064, #5a2c80, #614a9b, #6967b4, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 0.5px;
-  -webkit-text-stroke-color: black;
-  font-size: 30px;
-  text-decoration: underline;  
-}
+        button {
+          cursor: pointer;
+          box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+          background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
+          background-color:#79bbff;
+          border-radius:6px;
+          border:1px solid #84bbf3;
+          display:inline-block;
+          cursor:pointer;
+          color:#ffffff;
+          font-size:15px;
+          font-weight:bold;
+          padding:6px 24px;
+          text-decoration:none;
+          text-shadow:0px 1px 0px #528ecc;
+        }
+        button:hover {
+          background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
+          background-color:#378de5;
+        }
+        button:active {
+          position:relative;
+          top:1px;
+        }
 
-button {
-  cursor: pointer;
-  box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-  background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
-  background-color:#79bbff;
-  border-radius:6px;
-  border:1px solid #84bbf3;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-size:15px;
-  font-weight:bold;
-  padding:6px 24px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #528ecc;
-}
-button:hover {
-  background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
-  background-color:#378de5;
-}
-button:active {
-  position:relative;
-  top:1px;
-}
+        #todoInput {
+          height: 20px;
+        }
