--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
         align-items: center;
         border: 2px solid white;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        max-width: 500px;
+        max-width: 400px;
         margin: auto;
         padding: 10px;
         border-radius: 25px;
@@ -107,5 +107,6 @@
 
         input[type=checkbox] {
           float: right;
-          
+          height: 20px;
+          width: 20px;
       }
