--- a/styles.css
+++ b/styles.css
@@ -38,9 +38,9 @@
           border-radius: 15px;
           padding: 5px;
           text-align: left;
-          color:rgb(1, 32, 61);
+          color:rgb(44, 1, 61);
           -webkit-text-stroke-width: 0.5px;
-          -webkit-text-stroke-color:#b3ccff;
+          -webkit-text-stroke-color: rgb(30, 3, 146);
           margin-top: 5px;
       }
 
@@ -49,9 +49,9 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         -webkit-text-stroke-width: 0.5px;
-        -webkit-text-stroke-color: rgb(107, 3, 167);
+        -webkit-text-stroke-color:  rgb(30, 3, 146);
         font-size: 40px;
-        font-family: 'Open Sans Condensed', sans-serif;
+        font-family: 'Aclonica';
 
       }
 
@@ -60,17 +60,17 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         -webkit-text-stroke-width: 0.5px;
-        -webkit-text-stroke-color: rgb(107, 3, 167);
+        -webkit-text-stroke-color: rgb(30, 3, 146);
         font-family: 'Aclonica';
         font-size: 25px;
        }
 
       h3 {
-        background-image: linear-gradient(to left top, #520064, #5a2c80, #614a9b, #6967b4, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+        background-image: linear-gradient(to left top, #520064, #6a3397, #614a9b, #7e7caf, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         -webkit-text-stroke-width: 0.1px;
-        -webkit-text-stroke-color: rgb(107, 3, 167);
+        -webkit-text-stroke-color: rgb(30, 3, 146);
         font-size: 25px;
         text-decoration: underline;  
         font-family: 'Aclonica';
