--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
-
-        body {
+/* TO00BL10-3011 Web sovellusten kehittäminen JavaScriptillä */
+/* Tyylitiedosto */
+                
+body {
           background-image: url("https://www.teahub.io/photos/full/100-1003570_beautiful-landscape-4k-wallpaper-purple-nature-landscape-hd.jpg");
           width: 100%;
           height: 100%;
           margin: 0;
-        }
-    header {
+}
+header {
       text-align: center;
       align-items: center;
       max-width: 500px;
       margin: auto;
 
-    }
-    main {
+}
+main {
         text-align: center;
         align-items: center;
         border: 2px solid white;
@@ -21,17 +23,17 @@
         margin: auto;
         padding: 10px;
         border-radius: 25px;
-      }
+}
     
-      section {
+section {
         margin-top: 15px;
         border: 2px solid #b3ccff;
         padding: 5px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         border-radius: 25px;
-      }
+}
 
-       li {
+li {
         border: 2px solid #b3ccff;
          font-family: 'Aclonica';
           font-size: 22px;
@@ -41,11 +43,10 @@
           color:rgb(44, 1, 61);
           -webkit-text-stroke-width: 0.5px;
           -webkit-text-stroke-color: rgb(30, 3, 146);
-          margin-top: 5px;
-          
-      }
+          margin-top: 5px;   
+}
 
-      h1 {
+h1 {
         background-image: linear-gradient(to left top, #520064, #5a2c80, #614a9b, #6967b4, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -53,10 +54,9 @@
         -webkit-text-stroke-color:  rgb(30, 3, 146);
         font-size: 40px;
         font-family: 'Aclonica';
+}
 
-      }
-
-      h2 {
+h2 {
         background-image: linear-gradient(to left top, #520064, #5a2c80, #614a9b, #6967b4, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -64,9 +64,9 @@
         -webkit-text-stroke-color: rgb(30, 3, 146);
         font-family: 'Aclonica';
         font-size: 25px;
-       }
+}
 
-      h3 {
+h3 {
         background-image: linear-gradient(to left top, #520064, #6a3397, #614a9b, #7e7caf, #7383cb, #6e97dd, #6aabec, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -75,9 +75,9 @@
         font-size: 25px;
         text-decoration: underline;  
         font-family: 'Aclonica';
-      }
+}
 
-        button {
+button {
           cursor: pointer;
           box-shadow:inset 0px 1px 0px 0px #bbdaf7;
           background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
@@ -92,22 +92,23 @@
           padding:6px 24px;
           text-decoration:none;
           text-shadow:0px 1px 0px #528ecc;
-        }
-        button:hover {
+}
+
+button:hover {
           background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
           background-color:#378de5;
-        }
-        button:active {
+}
+button:active {
           position:relative;
           top:1px;
-        }
+}
 
-        #todoInput {
+#todoInput {
           height: 20px;
-        }
+}
 
-        input[type=checkbox] {
+input[type=checkbox] {
           float: right;
           height: 20px;
           width: 20px;
-      }
+}
